- added px to instruction

--- a/uppgift1/index.html
+++ b/uppgift1/index.html
@@ -10,7 +10,7 @@
 
     <!-- 
         UPPGIFT 1 - med hjälp av css:
-            1. Få div taggen nedan att bli 300 bred, 200 hög och ha färgen blå.
+            1. Få div taggen nedan att bli 300px bred, 200px hög och ha färgen blå.
             2. div taggen ska vara positionerad 50px från skärmens högerkant och 100px från skärmens top.
             3. När vi skrollar i sidan så ska div taggen ligga kvar 100px från skärmens top.
      -->
